--- a/css/nav.css
+++ b/css/nav.css
@@ -23,6 +23,10 @@
   color: #333333;
   display: inline-block;
   padding: 1.7rem;
+  transition: background-color 0.3s ease-in-out;
+}
+.nav__item a:hover {
+  background-color: rgba(160, 73, 85, 0.2078431373);
 }
 .nav__search {
   display: flex;
@@ -31,26 +35,15 @@
 .search {
   border: 1px solid #A04955;
   border-radius: 2rem;
-  height: 4rem;
-  font-size: 1.8rem;
+  width: 17.7rem;
+  height: 2.2rem;
+  font-size: 1.5rem;
   line-height: 2.2rem;
   margin: 1.2rem 0 1.2rem 1.7rem;
-}
-.search__data {
-  margin: 0.9rem 4rem 0.6rem 3.8rem;
-  display: flex;
-}
-.search__data input {
+  padding: 0.9rem 2rem 0.9rem 7.3rem;
   text-transform: uppercase;
   font-family: "Oswald";
   font-weight: 400;
-  border: none;
-  width: 15.7rem;
-}
-.search__lens {
-  display: inline-block;
   background: url("../img/lens.svg") no-repeat;
-  width: 2.4rem;
-  height: 2.45rem;
-  margin-right: 1.1rem;
+  background-position: 3.8rem 0.9rem;
 }
