--- a/css/scss/nav.scss
+++ b/css/scss/nav.scss
@@ -25,6 +25,11 @@
             color: #333333;
             display: inline-block;
             padding: 1.7rem;
+            transition: background-color .3s ease-in-out;
+        }
+
+        & a:hover{
+            background-color: #a0495535;
         }
     }
 
@@ -35,29 +40,15 @@
 .search {
     border:1px solid #A04955;
     border-radius: 2rem;
-    height: 4rem;
-    font-size:1.8rem;
+    width:17.7rem;   
+    height:2.2rem;
+    font-size:1.5rem;
     line-height: 2.2rem;
     margin:1.2rem 0 1.2rem 1.7rem;
-
-    &__data{
-        margin: .9rem 4rem .6rem 3.8rem;
-        display: flex;
-        
-        & input{
-            text-transform: uppercase;
-            font-family: 'Oswald';
-            font-weight: 400;
-            border:none;
-            width:15.7rem;
-        }
-    }
-
-    &__lens {
-        display: inline-block;            
-        background: url('../img/lens.svg') no-repeat;
-        width: 2.4rem;
-        height: 2.45rem;
-        margin-right: 1.1rem;
-    }
+    padding: .9rem 2rem .9rem 7.3rem;
+    text-transform: uppercase;
+    font-family: 'Oswald';
+    font-weight: 400;
+    background: url('../img/lens.svg') no-repeat;
+    background-position: 3.8rem .9rem ;
 }
