--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
   line-height: 3.3rem;
   font-family: "Open Sans";
   color: #000000;
-  overflow: hidden;
   margin: 0;
 }
 
@@ -17,7 +16,17 @@ a {
   text-decoration: none;
 }
 
+li {
+  list-style: none;
+}
+
+ul, p {
+  padding: 0;
+  margin: 0;
+}
+
 .container {
+  max-width: 132rem;
   margin: 0 auto;
   width: 90%;
 }
@@ -39,52 +48,150 @@ a {
   background-color: rgba(0, 0, 0, 0.0784313725);
 }
 
-.header {
-  margin: 7rem 0 9rem;
-  height: 62rem;
+.subtitle {
+  font-family: "Oswald";
+  font-size: 3.6rem;
+  font-weight: 500;
+  line-height: 3.6rem;
+  color: #001F3D;
+  margin: 0;
 }
-.header__wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-.header__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.header__title {
+
+.title {
   font-family: "Oswald";
   font-size: 6.5rem;
   font-weight: 700;
   line-height: 9.6rem;
+  color: #001F3D;
   margin: 0;
 }
-.header__description {
+
+.text-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.text-column__title {
+  margin: 0;
+}
+.text-column__description {
   margin: 1rem 0 3rem;
 }
-.header__pic {
+
+.picture-in-rect {
   position: relative;
 }
-.header__img {
+.picture-in-rect__img {
   position: relative;
   margin: 3.5rem -1.1rem;
   z-index: 10;
 }
-.header__rect {
+.picture-in-rect__rect {
   position: absolute;
   width: 51.7rem;
   height: 46.5rem;
   z-index: 0;
+  border: 1px solid #A04955;
 }
-.header__rect_red {
-  z-index: 1;
+.picture-in-rect__rect_up {
   right: 0;
   top: 0;
-  background: #A04955;
 }
-.header__rect_white {
+.picture-in-rect__rect_down {
   right: 13.9rem;
   top: 15.6rem;
-  z-index: 0;
-  border: 1px solid #A04955;
+}
+.picture-in-rect__rect_red {
+  background: #A04955;
+}
+
+.flex__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  margin: 7rem 0 9rem;
+  height: 62rem;
+}
+
+.sale {
+  background-color: #F1F1F1;
+  color: #333333;
+  text-align: center;
+  font-weight: 500;
+  padding: 8rem 0;
+}
+.sale__subtitle {
+  color: #333333;
+}
+.sale__title {
+  color: #333333;
+}
+.sale__products {
+  margin-top: 2.3rem;
+  display: flex;
+  justify-content: space-between;
+}
+.sale__product {
+  background-color: white;
+  padding: 3.2rem;
+}
+
+.product-card {
+  font-family: "Oswald";
+  font-size: 1.8rem;
+  width: 17%;
+  display: flex;
+  flex-direction: column;
+}
+.product-card__title {
+  font-size: 2.4rem;
+}
+.product-card__title-place {
+  flex: 1 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.product-card__rating {
+  display: flex;
+  justify-content: center;
+}
+.product-card__star {
+  width: 2.4rem;
+  height: 2.4rem;
+  margin: 0.5rem 0.35rem;
+  background-image: url("../../img/star.svg");
+  background-repeat: no-repeat;
+}
+.product-card__star-void {
+  background-image: url("../../img/grey-star.svg");
+}
+.product-card__text {
+  font-weight: 200;
+}
+.product-card__price {
+  font-weight: 500;
+}
+.product-card__btn {
+  margin-top: 1.5rem;
+  background-image: url("../../img/shopping-bag.png");
+  background-repeat: no-repeat;
+  background-position: 0.7rem 1rem;
+  padding: 0.4rem 0.8rem 0.4rem 3.3rem;
+  font-weight: normal;
+  background-color: #A04955;
+  color: #fff;
+  cursor: pointer;
+}
+
+.bestseller {
+  padding: 9rem 0;
+}
+.bestseller__img {
+  margin: -1.2rem 0;
+}
+.bestseller__text {
+  margin-left: 6rem;
 }
