--- a/css/nav.css
+++ b/css/nav.css
@@ -4,7 +4,12 @@
   display: flex;
   justify-content: space-between;
   text-transform: uppercase;
-  margin: 3.3rem 0;
+  margin: 1.3rem 0;
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  width: 90%;
+  max-width: 132rem;
 }
 .nav__navigation {
   display: flex;
