--- a/css/scss/nav.scss
+++ b/css/scss/nav.scss
@@ -5,7 +5,12 @@
     display: flex;
     justify-content: space-between;
     text-transform: uppercase;
-    margin:3.3rem 0;
+    margin:1.3rem 0;
+    position:fixed;
+    z-index: 99;
+    top:0;
+    width:90%;
+    max-width: 132rem;
 
     &__navigation{
         display: flex;
