--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ ul, p {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  min-width: 24rem;
   padding: 0px 3rem;
   display: flex;
   justify-content: center;
@@ -59,6 +60,21 @@ ul, p {
   color: #fff;
   background-color: #A04955;
   border: none;
+}
+
+.up-btn {
+  width: 8.3rem;
+  height: 8.3rem;
+  background-color: #A04955;
+  border-radius: 50%;
+  background-image: url("../../img/arrow.svg");
+  background-repeat: no-repeat;
+  background-position: 50%;
+  position: fixed;
+  right: 5rem;
+  bottom: 3.5rem;
+  display: block;
+  z-index: 99;
 }
 
 .subtitle {
@@ -83,6 +99,7 @@ ul, p {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 3;
 }
 .text-column__title {
   margin: 0;
@@ -127,7 +144,8 @@ ul, p {
 }
 
 .header {
-  margin: 7rem 0 9rem;
+  margin-top: 6rem;
+  padding: 8.7rem 0 9rem;
   height: 62rem;
 }
 
@@ -257,7 +275,8 @@ ul, p {
 
 .article {
   background-image: url("../../img/rectangle.png");
-  background-size: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .article * {
   color: #fff;
@@ -271,7 +290,7 @@ ul, p {
 }
 
 .sale3 {
-  margin: 9rem 0;
+  padding: 9rem 0;
 }
 .sale3__bg {
   background-color: #A04955;
@@ -292,12 +311,13 @@ ul, p {
 }
 .sale3__product {
   background-color: #fff;
-  width: 27.5%;
+  width: 25%;
   border: 1px solid #A04955;
-  padding: 2.7rem 0 3.8rem;
+  padding: 2.7rem 1.7rem 3.8rem;
+  overflow: hidden;
 }
 .sale3__product img {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   margin-bottom: 1rem;
 }
 .sale3__product .btn-red {
@@ -306,4 +326,81 @@ ul, p {
   width: 22rem;
   height: 4rem;
   padding: 0 1rem;
+}
+
+.about__bg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f3f3f3;
+  margin: 41.4rem 5.3rem 4.6rem;
+  padding: 13rem 4rem 4rem;
+  position: relative;
+}
+.about__mark {
+  position: absolute;
+  top: -15.5rem;
+}
+.about__description {
+  padding: 2rem 0 3.5rem;
+}
+
+.footer {
+  background-color: #A04955;
+}
+.footer__columns {
+  color: #fff;
+  font-family: "Oswald";
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+.footer__column {
+  margin: 2.2rem;
+}
+.footer__column:hover {
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.2509803922);
+}
+.footer__column:first-child {
+  margin-left: 0;
+}
+.footer__column:last-child {
+  margin-right: 0;
+}
+.footer__title {
+  font-size: 2.4rem;
+  font-weight: 600;
+  color: #fff;
+}
+.footer__item {
+  color: #fff;
+  display: block;
+}
+.footer__form {
+  background-color: #fff;
+  padding: 0.9rem;
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 0;
+}
+.footer__form input {
+  font-family: "Oswald";
+  font-weight: 400;
+  font-size: 1.8rem;
+  line-height: 3.3rem;
+  text-transform: uppercase;
+}
+.footer__form input[type=email] {
+  flex: 1 1 auto;
+  border: none;
+}
+.footer__btn {
+  width: 16.7rem;
+  height: 4.3rem;
+}
+
+.rights__sign {
+  font-size: 1.4rem;
+  margin: 1rem 0;
+  opacity: 0.5;
+  font-family: "Oswald";
 }
