--- a/css/nav.css
+++ b/css/nav.css
@@ -49,6 +49,6 @@
   text-transform: uppercase;
   font-family: "Oswald";
   font-weight: 400;
-  background: url("../img/lens.svg") no-repeat;
+  background: url("../img/icons/lens.svg") no-repeat;
   background-position: 3.8rem 0.9rem;
 }
