--- a/css/scss/nav.scss
+++ b/css/scss/nav.scss
@@ -1,4 +1,3 @@
-
 .nav {
     font-family: 'Oswald';
     font-weight: 400;
@@ -54,6 +53,6 @@
     text-transform: uppercase;
     font-family: 'Oswald';
     font-weight: 400;
-    background: url('../img/lens.svg') no-repeat;
+    background: url('../img/icons/lens.svg') no-repeat;
     background-position: 3.8rem .9rem ;
 }
