--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@200;400;500;600;700&display=swap');
+
 $gray-bg: #F1F1F1;
 $red: #A04955;
 $cont-small-width: 86%;
@@ -6,6 +7,7 @@ $cont-small-width: 86%;
 html{
     font-size: 10px;
 }
+
 body{
     font-size: 2.4rem;
     font-weight: 300;
@@ -14,16 +16,24 @@ body{
     color:#000000;
     margin:0;
 }
+
 a{
     text-decoration: none;
 }
+
 li{
     list-style: none;
 }
+
 ul, p{
     padding:0;
     margin:0;
 }
+
+.hide {
+    display: none;
+}
+
 .container{
     max-width: 132rem;
     margin: 0 auto;
@@ -34,6 +44,7 @@ ul, p{
         margin: 0 auto;
     }
 }
+
 .btn, .btn-red {
     text-align: center;
     border: 1px solid #000000;
@@ -48,20 +59,23 @@ ul, p{
     cursor: pointer;
     transition: background-color .3s ease-in-out;
 }
+
 .btn:hover{
     background-color: #00000014;
-}    
+}  
+
 .btn-red{
     color: #fff;
     background-color: $red;
     border: none;
 }
+
 .up-btn{
     width:8.3rem;
     height:8.3rem;
     background-color: #A04955;
     border-radius: 50%;
-    background-image: url('../../img/arrow.svg');
+    background-image: url('../../img/icons/arrow.svg');
     background-repeat: no-repeat;
     background-position: 50%;
     position:fixed;
@@ -69,7 +83,9 @@ ul, p{
     bottom: 3.5rem;
     display: block;
     z-index: 99;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
 .subtitle {
     font-family: 'Oswald';
     font-size: 3.6rem;
@@ -78,6 +94,7 @@ ul, p{
     color:#001F3D;
     margin:0;
 }
+
 .title {
     font-family: 'Oswald';
     font-size: 6.5rem;
@@ -143,49 +160,18 @@ ul, p{
     }
 }
 
-.header {
-    margin-top: 6rem;
-    padding: 8.7rem 0 9rem;
-    height:62rem;
-}
-
-.sale {
-    background-color: $gray-bg;
-    color:#333333;
-    text-align: center;
-    font-weight: 500;
-    padding: 8rem 0;
-
-		&__subtitle {
-            color:#333333;
-        }
-
-		&__title {
-            color:#333333;
-        }
-
-		&__products {
-            margin-top: 2.3rem;
-            display:flex;
-            justify-content: space-between;
-        }
-
-		&__product {
-            background-color: white;
-            padding: 3.2rem;
-        }
-}
-
 .product-card {
     font-family: 'Oswald';
     font-size: 1.8rem;
-    width: 17%;
     display: flex;
     flex-direction: column;
-    align-items: center;;
+    align-items: center;
+    background-color: #fff;
+    padding: 2.7rem 1.7rem 3.8rem;
 
 		&__title {
             font-size: 2.4rem;
+            text-align: center;
         }
 
         &__title-place{
@@ -204,12 +190,12 @@ ul, p{
             width:2.4rem;
             height: 2.4rem;
             margin: .5rem .35rem;
-            background-image: url('../../img/star.svg');
+            background-image: url('../../img/icons/star.svg');
             background-repeat: no-repeat;
         }
 
 		&__star-void {
-            background-image: url('../../img/grey-star.svg');
+            background-image: url('../../img/icons/grey-star.svg');
         }
 
 		&__text {
@@ -222,7 +208,7 @@ ul, p{
 
 		&__btn {
             margin-top:1.5rem;
-            background-image: url('../../img/shopping-bag.svg');
+            background-image: url('../../img/icons/shopping-bag.svg');
             background-repeat: no-repeat;
             background-position: .9rem .8rem;
             padding: .4rem .8rem .4rem 3.3rem;
@@ -232,23 +218,6 @@ ul, p{
             cursor: pointer;
             width: fit-content;
         }
-}
-
-.bestseller {
-    padding: 9rem 0;
-
-    &__img{
-        margin:-1.2rem 0;
-    }
-}
-
-.sale2 {
-    background-color: $gray-bg;
-    padding: 9rem 0;
-
-    &__card {
-        width: 48%;
-    }
 }
 
 .category-card {
@@ -287,161 +256,4 @@ ul, p{
     &__btn {
         width: 36.6rem;
     }
-}
-
-.article {
-    background-image: url('../../img/rectangle.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-    & *{
-        color: #fff;
-    }
-
-    &__column {
-        width:48%;
-        padding: 2.2rem 0 4rem;
-    }
-
-    & .text-column__description {
-        width: 90%;
-    }
-}
-
-.sale3 {
-    padding: 9rem 0;
-
-    &__bg {
-        background-color: $red;
-        height: 34rem;
-        padding-top: 3rem;
-        position: relative;
-    }
-    
-    &__title {
-        color:white;
-        text-align: center;
-    }
-
-    &__products {
-        position: absolute;
-        bottom: -50%;
-        width: $cont-small-width;
-        display: flex;
-        justify-content: space-between;
-    }
-
-    &__product {
-        background-color: #fff;
-        width: 25%;
-        border: 1px solid $red;
-        padding: 2.7rem 1.7rem 3.8rem;
-        overflow: hidden;
-
-        & img{
-            flex: 1 1 auto;
-            margin-bottom: 1rem;
-        }
-
-        & .btn-red{
-            font-family: 'Open sans';
-            margin-top: 1.5rem;
-            width:22rem;
-            height: 4rem;
-            padding: 0 1rem;
-        }
-    }
-}
-
-.about {
-
-    &__bg {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: #f3f3f3;
-        margin: 41.4rem 5.3rem 4.6rem;
-        padding: 13rem 4rem 4rem;
-        position: relative;
-    }
-
-    &__mark {
-        position: absolute;
-        top: -15.5rem;
-    }
-
-    &__description {
-        padding: 2rem 0 3.5rem;
-    }
-}
-
-.footer {
-    background-color: $red;
-
-    &__columns {
-        color:#fff;
-        font-family: 'Oswald';
-        font-size: 1.8rem;
-        font-weight: 400;
-    }
-
-    &__column {
-        margin: 2.2rem;
-    }
-    
-    &__column:hover {
-        text-shadow: 0 4px 4px #00000040;
-    }
-
-    &__column:first-child {
-        margin-left: 0;
-    }
-
-    &__column:last-child {
-        margin-right: 0;
-    }
-
-    &__title {
-        font-size: 2.4rem;
-        font-weight: 600;
-        color: #fff;
-    }
-
-    &__item{
-        color: #fff;
-        display: block;
-    }
-
-    &__form {
-        background-color: #fff;
-        padding:.9rem;
-        display: flex;
-        justify-content: space-between;
-        margin:1rem 0;
-
-        & input{
-            font-family: 'Oswald';
-            font-weight: 400;
-            font-size: 1.8rem;
-            line-height: 3.3rem;
-            text-transform: uppercase;
-        }
-
-        & input[type="email"]{
-            flex: 1 1 auto;
-            border:none;
-        }
-    }
-
-    &__btn {
-        width: 16.7rem;
-        height: 4.3rem;
-    }
-}
-
-.rights__sign {
-    font-size: 1.4rem;
-    margin: 1rem 0;
-    opacity: .5;
-    font-family: 'Oswald';
 }
