--- a/css/catalog.css
+++ b/css/catalog.css
@@ -66,7 +66,7 @@
   padding: 0 2.5rem;
 }
 .sidebar__section {
-  border-bottom: solid #A04955;
+  border-bottom: 1px solid #A04955;
   padding: 2rem 0;
   position: relative;
 }
