added html and scss for product modal window

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -192,6 +192,7 @@ ul, p{
             margin: .5rem .35rem;
             background-image: url('../../img/icons/star.svg');
             background-repeat: no-repeat;
+            background-size: 2.4rem;
         }
 
 		&__star-void {
