--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@200;400;500;600;700&display=swap");
 html {
+  position: relative;
   font-size: 10px;
 }
 
