--- a/css/scss/catalog.scss
+++ b/css/scss/catalog.scss
@@ -26,8 +26,14 @@ $red: #A04955;
 		}
 
 		&__search {
-			border-bottom: solid;
-			color: #c4c4c4;
+			text-transform: uppercase;
+			border: none;
+			border-bottom: 2px solid #c4c4c4;
+			color:#8d8d8d;
+
+			&::placeholder{
+				color: #c4c4c4;
+			}
 		}
 
 		&__sidebar {
