--- a/css/catalog.css
+++ b/css/catalog.css
@@ -170,39 +170,18 @@
   transform: rotate(-0.25turn);
 }
 
-.color-black {
-  background-color: #000 !important;
-}
-
-.color-brown {
-  background-color: #744524 !important;
-}
-
-.color-blue {
-  background-color: #113EB1 !important;
-}
-
-.color-green {
-  background-color: #549554 !important;
-}
-
-.color-gray {
-  background-color: #808080 !important;
-}
-
-.color-orange {
-  background-color: #E59500 !important;
-}
-
-.color-beige {
-  background-color: #e6d3ae !important;
-}
-
-.color-white {
-  background-color: #fff !important;
+.color-square {
   border: 1px solid #BCBCCC;
+  transition: all 1s ease;
 }
 
+.color-square:hover {
+  transform: scale(1.1);
+}
+
+.product-card {
+  overflow: hidden;
+}
 .product-card__color-wrapper {
   display: flex;
   flex: 1 1 auto;
@@ -231,4 +210,7 @@
   width: 15%;
   height: 100%;
   background-color: white;
+}
+.product-card img {
+  width: 100%;
 }
