--- a/css/scss/catalog.scss
+++ b/css/scss/catalog.scss
@@ -193,42 +193,25 @@ $red: #A04955;
 	}
 }
 
-
-.color-black {
-	background-color: #000!important;
-}
-.color-brown {
-	background-color: #744524!important;
-}
-.color-blue {
-	background-color: #113EB1!important;
-}
-.color-green {
-	background-color: #549554!important;
-}
-.color-gray {
-	background-color: #808080!important;
-}
-.color-orange {
-	background-color: #E59500!important;
-}
-.color-beige {
-	background-color: #e6d3ae!important;
-}
-.color-white {
-	background-color: #fff!important;
+.color-square {
 	border: 1px solid #BCBCCC;
+	transition: all 1s ease;
+}
+
+.color-square:hover{
+	transform:scale(1.1);
 }
 
 .product-card{
+	overflow: hidden;
 
-&__color-wrapper{
-	display: flex;
-	flex: 1 1 auto;
-	justify-content: center;
-	align-items: center;
-	margin: 1.2rem 5rem 0;
-}
+	&__color-wrapper{
+		display: flex;
+		flex: 1 1 auto;
+		justify-content: center;
+		align-items: center;
+		margin: 1.2rem 5rem 0;
+	}
 
 	&__color-list {
 		display: flex;
@@ -253,5 +236,9 @@ $red: #A04955;
 			height: 100%;
 			background-color: white;
 		}
+	}
+
+	& img{
+		width: 100%;
 	}
 }
